--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title> My First Website </title>
 	</head>
 	<body>
-		<H1> This is the first assignment</H1>
+		<H1> Updated the first assignment</H1>
 	</body>
 
 
