--- a/index.html
+++ b/index.html
@@ -3,7 +3,31 @@
 		<title> My First Website </title>
 	</head>
 	<body>
-		<H1> Updated the first assignment</H1>
+		Linux Commands
+ls- list all directories
+cd- change directory
+mkdir- make directory
+pwd- present working directory
+Git Commands
+git init – create a repository
+git add filename- add file to git in preparation for a commit
+git commit -m “message” = do the commit to save changes
+git checkout -b branchname= make a new branch and checkout
+git checkout branchname= checkout branch
+git merge branchname= merge the branch (Note: You have to be on the branch that you want to merge to)
+git status- status of the repository
+git- add index.html (just adding the file, not commit)
+git commit
+-m(message)
+{git commit -m “Task created with default text”}
+git remote add origin "site of repo" (remote- where are going to upload, origin- is a standard bookmark given)
+Vi Commands
+vi – (index.html) (to start Visual Editor)
+i- start editing
+esc- to stop editor
+:w – write
+:q – quit
+:wq – write and quit
 	</body>
 
 
