--- a/index.html
+++ b/index.html
@@ -3,31 +3,38 @@
 		<title> My First Website </title>
 	</head>
 	<body>
-		Linux Commands
-ls- list all directories
-cd- change directory
-mkdir- make directory
-pwd- present working directory
-Git Commands
-git init – create a repository
-git add filename- add file to git in preparation for a commit
-git commit -m “message” = do the commit to save changes
-git checkout -b branchname= make a new branch and checkout
-git checkout branchname= checkout branch
-git merge branchname= merge the branch (Note: You have to be on the branch that you want to merge to)
-git status- status of the repository
-git- add index.html (just adding the file, not commit)
-git commit
--m(message)
-{git commit -m “Task created with default text”}
-git remote add origin "site of repo" (remote- where are going to upload, origin- is a standard bookmark given)
-Vi Commands
-vi – (index.html) (to start Visual Editor)
-i- start editing
-esc- to stop editor
-:w – write
-:q – quit
-:wq – write and quit
+		<H2>Updated</H2>
+		<H2>Linux Commands</H2>
+		<ul>
+			<li>ls- list all directories</li>
+			<li>cd- change directory</li>
+			<li>mkdir- make directory</li>
+			<li>pwd- present working directory</li>
+		</ul>
+<H2>Git Commands<h2>
+	<ul>
+		<li>git init – create a repository</li>
+		<li>git add filename- add file to git in preparation for a commit</li>
+		<li>git commit -m “message” = do the commit to save changes</li>
+		<li>git checkout -b branchname= make a new branch and checkout</li>
+		<li>git checkout branchname= checkout branch</li>
+		<li>git merge branchname= merge the branch (Note: You have to be on the branch that you want to merge to)</li>
+		<li>git status- status of the repository</li>
+		<li>git- add index.html (just adding the file, not commit)</li>
+		<li>git commit</li>
+		<li>-m(message)</li>
+		<li>{git commit -m “Task created with default text”}</li>
+		<li>git remote add origin "site of repo" (remote- where are going to upload, origin- is a standard bookmark given)</li>
+	</ul>
+	<h2>Vi Commands</h2>
+	</ul>
+		<li>vi – (index.html) (to start Visual Editor)</li>
+		<li>i- start editing</li>
+		<li>esc- to stop editor</li>
+		<li>:w – write</li>
+		<li>:q – quit</li>
+		<li>:wq – write and quit</li>
+	</ul>
 	</body>
 
 
